--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = fdm_materials
-url = https://github.com/Ultimaker/fdm_materials/archive/4.5.0/fdm_materials-4.5.0.tar.gz
+url = https://github.com/Ultimaker/fdm_materials/archive/4.6.0/fdm_materials-4.6.0.tar.gz
 archives = 
 giturl = https://github.com/Ultimaker/fdm_materials.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
