--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = fdm_materials
-url = https://github.com/Ultimaker/fdm_materials/archive/4.11.0/fdm_materials-4.11.0.tar.gz
+url = https://github.com/Ultimaker/fdm_materials/archive/4.12.0/fdm_materials-4.12.0.tar.gz
 archives = 
 giturl = https://github.com/Ultimaker/fdm_materials.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
