--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = fdm_materials
-url = https://github.com/Ultimaker/fdm_materials/archive/4.13.0/fdm_materials-4.13.0.tar.gz
+url = https://github.com/Ultimaker/fdm_materials/archive/5.2.0/fdm_materials-5.2.0.tar.gz
 archives = 
 giturl = https://github.com/Ultimaker/fdm_materials.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
